# ChangeLog for app-shells/oh-my-zsh
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  06 Nov 2011; Martin Väth <martin@mvath.de>
  Write ebuild from scratch.