@@ -1,0 +1,1 @@
+DIST cpi-1.0.tar.gz 1875 RMD160 f2f9faf3d27acae6af03b3ef9368b5dd6cb20419 SHA1 b3f996279ccc3bc892ab1b8dba430e73914e61a4 SHA256 41ae6f73f1581d5f1c43b0abb2eb0aaadbe4c8c4cab3f575bfaf90ba152af24a
