@@ -1,0 +1,24 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header $
+
+EAPI="4"
+RESTRICT="mirror"
+
+DESCRIPTION="A wrapper for cp -i -a, making use of diff"
+HOMEPAGE="https://github.com/vaeth/${PN}"
+SRC_URI="http://github.com/vaeth/${PN}/tarball/release-${PV} -> ${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+
+src_unpack() {
+	default
+	cd *"${PN}"-*
+	S="${PWD}"
+}
+
+src_install() {
+	dobin "${PN}"
+}
