@@ -2,5 +2,8 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+  03 Feb 2012; Martin Väth <martin@mvath.de>
+  Fix description
+
   06 Nov 2011; Martin Väth <martin@mvath.de>
   Write ebuild from scratch.
